filebrowser header layout bug fixed, cropresizer modal position corrected

--- a/media/filebrowser/global.css
+++ b/media/filebrowser/global.css
@@ -31,6 +31,11 @@ a {
   padding-left: 0;
 }
 
+.navbar {
+  position: relative;
+  z-index: 2;
+}
+
 #left,
 #files {
   position: relative;
